# PDF-AI-Gen_PPT

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/: __init__.py  ai_client.py  config.py  main.py  models.py  output_manager.py  pdf_parser.py  ppt_generator.py  question_generator.py  question_ppt_generator.py  utils.py
